# AdvanceProfit-EA

./: .gitignore  AdvanceEA.mq5  AdvanceEA.py  COMPILE_EA_GUIDE.md  EURUSD_D1_clean.csv  EURUSD_D1_raw.csv  EURUSD_H1_raw.csv  EURUSD_H4_clean.csv  EURUSD_H4_raw.csv  INSTALLATION_NOTES.md  MT5_EA_INSTALLATION_GUIDE.md  QUICK_START_STRATEGY_TESTER.md  README.md  SETUP.md  STRATEGY_PLAN_AND_ANALYSIS.md  analyze_probabilities.py  barrier_sweep.py  buy_experiment.py  config.yaml  data_fetch.py  decision_tree_baseline.py  features_used.json  find_active_mt5_folder.sh  install_ea.sh  main.py  pyproject.toml  regime_analysis.py  run_all.py  threshold_experiment.py  validate_trend_bias.py  walk_forward.py  walk_forward_combined.py  walk_forward_twin.py  xgb_eurusd_h1.pkl
AdvanceProfit-EA.git/: config  packed-refs
AdvanceProfit-EA.git/info/: refs
AdvanceProfit-EA.git/objects/info/: commit-graph  packs
AdvanceProfit-EA.git/objects/pack/: pack-10427254d627372cc07ef3eb4ccd1d719269a8ad.bitmap  pack-10427254d627372cc07ef3eb4ccd1d719269a8ad.idx  pack-10427254d627372cc07ef3eb4ccd1d719269a8ad.pack  pack-10427254d627372cc07ef3eb4ccd1d719269a8ad.rev
analysis/: add_directional_features.py  analyze_probabilities.py  buy_experiment.py  check_features.py  check_labels.py  diagnose_model.py
data/: GBPUSD_H1_raw.csv
docs/: BUY_MODEL.md  LOGGING.md
scripts/: barrier_sweep.py  regime_analysis.py  run_all.py  threshold_experiment.py  threshold_experiment_buy.py  train_buy_model.py  validate_trend_bias.py  walk_forward.py  walk_forward_buy.py  walk_forward_buy_model_sell_signals.py  walk_forward_buy_threshold_sweep.py  walk_forward_combined.py  walk_forward_twin.py
src/: __init__.py  config.py  logger.py
src/api/: __init__.py
src/backtesting/: __init__.py  strategy.py
src/data_collection/: __init__.py  loader.py  validator.py
src/features/: engineer.py
src/models/: hpo.py  trainer.py
src/pipelines/: training.py
src/utils/: leakage_detector.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_dow_parity.py  test_execution_hardening.py  test_features.py  test_logger.py  test_model.py  test_signal_combination.py
